<resources>
    <string name="app_name">Notepad-X</string>
    <string name="add_note">Add Note</string>
    <string name="plan_your_note">Plan your note....</string>
    <string name="note">Note*</string>
    <string name="enter_title">Enter title</string>
    <string name="title">Title*</string>
    <string name="do_you_want_to_exit">Do you want to exit?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="my_notes">My Notes</string>
    <string name="notepad_x">Notepad-X</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notes">Notes</string>
    <string name="checklist">Checklist</string>
</resources>