<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bottom_sheet_round_corner"
    android:padding="20dp">

    <View
        android:id="@+id/view"
        android:layout_width="30dp"
        android:layout_height="3dp"
        android:layout_centerHorizontal="true"
        android:background="@color/grey"/>

    <TextView
        android:id="@+id/textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/do_you_want_to_exit"
        android:layout_below="@id/view"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textSize="22sp"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/Yes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorAccentDark"
        android:text="@string/yes"
        android:layout_marginHorizontal="40dp"
        android:textColor="@color/white"
        android:background="@drawable/view_border_grey"
        android:layout_marginTop="40dp"
        android:layout_below="@id/textview"/>

    <Button
        android:id="@+id/No"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorAccentDark"
        android:text="@string/no"
        android:layout_marginHorizontal="40dp"
        android:textColor="@color/white"
        android:background="@drawable/view_border_grey"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="20dp"
        android:layout_below="@id/textview"/>

</RelativeLayout>